# spakky-framework

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RTK.md  TODO.md  codecov.yml  mkdocs.yml  pyproject.toml  spakky-framework.code-workspace
core/spakky/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
core/spakky-agent/: CHANGELOG.md  README.md  pyproject.toml
core/spakky-agent/examples/: __init__.py  code_assistant_demo.py  inbound_adapter_examples.py
core/spakky-agent/tests/acceptance/: conftest.py  test_adr0009_contract_conformance.py  test_code_assistant_demo_acceptance.py
core/spakky-agent/tests/fixtures/: __init__.py  agent_app.py  future_agent_app.py
core/spakky-agent/tests/unit/: test_approval.py  test_code_assistant_demo.py  test_context.py  test_delegation.py  test_execution.py  test_inbound_adapter_examples.py  test_public_api.py  test_recovery.py  test_safety.py  test_signal_consumption.py  test_state_signal_evidence_yield.py  test_tooling.py
core/spakky-data/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
core/spakky-data/tests/aspects/: test_transactional.py
core/spakky-data/tests/persistency/: test_persistency_error.py  test_transaction.py  test_transaction_coverage.py
core/spakky-data/tests/stereotype/: test_repository.py
core/spakky-domain/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
core/spakky-domain/tests/models/: test_aggregate_root.py  test_domain_event.py  test_entity.py  test_value_object.py
core/spakky-domain/tests/usecases/: test_command.py  test_query.py
core/spakky-event/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
core/spakky-event/tests/: test_event_consumer.py  test_event_publisher.py
core/spakky-event/tests/integration/: __init__.py  conftest.py  test_event_publishing_flow.py  test_handler_registration.py
core/spakky-event/tests/post_processor/: __init__.py  test_event_handler_registration.py
core/spakky-event/tests/publisher/: test_domain_event_publisher.py
core/spakky-event/tests/stereotype/: test_event_handler.py
core/spakky-event/tests/unit/: __init__.py  test_auth_propagation.py  test_event_consumer.py  test_event_error.py  test_event_publisher.py  test_event_transport_headers.py
core/spakky/tests/aop/: conftest.py  test_advisor.py  test_aop.py  test_aspect_errors.py  test_memory_safety.py  test_order.py  test_post_processor.py
core/spakky/tests/application/: conftest.py  test_application_context.py  test_application_context_concurrency.py  test_application_context_errors.py  test_application_methods.py  test_application_scan.py  test_contribution_loader_conformance.py  test_di_multi_implementation_conformance.py  test_plugin.py  test_startup_diagnostics.py
core/spakky/tests/aspects/: test_logging.py
core/spakky/tests/common/: test_annotation.py  test_ensure_importable.py  test_importing.py  test_importing_edge_cases.py  test_importing_errors.py  test_importing_is_subpath_of.py  test_metadata.py  test_mro.py  test_mutability.py  test_proxy.py  test_proxy_coverage.py  test_types.py  test_types_edge_cases.py
core/spakky/tests/core/: test_annotation.py  test_importing.py  test_mro.py  test_proxy_coverage.py  test_types.py  test_types_coverage.py  test_types_edge_cases.py
core/spakky/tests/pod/: test_application_context.py  test_aware_post_processor.py  test_inject.py  test_pod.py  test_pod_decorator_errors.py  test_pod_edge_cases.py  test_qualifier_coverage.py  test_tag_registry.py
core/spakky/tests/service/: test_background_service.py
core/spakky/tests/stereotype/: test_configuration.py  test_controller.py  test_repository.py  test_usecase.py
core/spakky/tests/utils/: test_casing.py  test_inspection.py  (+1 more)
plugins/spakky-celery/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-celery/tests/: conftest.py
plugins/spakky-cryptography/: CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-cryptography/tests/: test_auth_provider.py  test_encoding.py  test_hash.py  test_hmac.py  test_key.py
plugins/spakky-fastapi/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-fastapi/tests/: conftest.py  test_actuator.py  test_actuator_docs_contract.py  test_bind_lifespan.py  test_error_handling.py  test_readme_contract.py  test_routing.py  test_tracing.py
plugins/spakky-grpc/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-logging/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-oidc/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-oidc/tests/: test_provider.py
plugins/spakky-openfga/: CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-openfga/tests/: __init__.py
plugins/spakky-outbox/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-outbox-sqlalchemy/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-redis/: CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-security/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-security/tests/: test_encoding.py  test_hash.py  test_hmac.py  test_jwt.py  test_key.py
plugins/spakky-sqlalchemy/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-typer/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-typer/tests/: conftest.py  test_actuator_command.py  test_command.py  test_readme_contract.py
plugins/spakky-vllm/: CHANGELOG.md  README.md  pyproject.toml
plugins/spakky-vllm/examples/: local_smoke.py
plugins/spakky-vllm/tests/: __init__.py
spakky/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
spakky/src/spakky/: __init__.py
spakky/tests/application/: test_application_context_errors.py  test_plugin.py
spakky/tests/core/: test_importing_errors.py
spakky/tests/pod/: test_inject.py  test_pod_edge_cases.py
(+1388 files in other folders)
