[project]
name = "spakky-framework"
version = "6.0.0"
description = "Spakky framework monorepo"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = []

[dependency-groups]
dev = [
  "commitizen>=4.10.0",
  "pre-commit>=4.5.0",
  "pyrefly>=0.43.1",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-spec>=6.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.6",
  "toml>=0.10.2",
  "typer>=0.15.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.0.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "core/spakky/pyproject.toml:version",
  "core/spakky-domain/pyproject.toml:version",
  "core/spakky-data/pyproject.toml:version",
  "core/spakky-event/pyproject.toml:version",
  "plugins/spakky-fastapi/pyproject.toml:version",
  "plugins/spakky-rabbitmq/pyproject.toml:version",
  "plugins/spakky-security/pyproject.toml:version",
  "plugins/spakky-typer/pyproject.toml:version",
  "plugins/spakky-kafka/pyproject.toml:version",
  "plugins/spakky-sqlalchemy/pyproject.toml:version",
  "plugins/spakky-outbox/pyproject.toml:version",
  "plugins/spakky-outbox-sqlalchemy/pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.uv.workspace]
members = [
  "core/spakky",
  "core/spakky-domain",
  "core/spakky-data",
  "core/spakky-event",
  "plugins/spakky-fastapi",
  "plugins/spakky-rabbitmq",
  "plugins/spakky-security",
  "plugins/spakky-typer",
  "plugins/spakky-kafka",
  "plugins/spakky-sqlalchemy",
  "plugins/spakky-outbox",
  "plugins/spakky-outbox-sqlalchemy",
]


[tool.uv.sources]
spakky = { workspace = true }
spakky-domain = { workspace = true }
spakky-data = { workspace = true }
spakky-event = { workspace = true }
spakky-fastapi = { workspace = true }
spakky-rabbitmq = { workspace = true }
spakky-security = { workspace = true }
spakky-typer = { workspace = true }
spakky-kafka = { workspace = true }
spakky-sqlalchemy = { workspace = true }
spakky-outbox = { workspace = true }
spakky-outbox-sqlalchemy = { workspace = true }

[tool.pyrefly]
python-version = "3.14"
search_path = ["scripts"]
project_excludes = ["**/__pycache__", "**/*.pyc"]
