[project]
name = "spakky-framework"
version = "6.3.0"
description = "Spakky framework monorepo"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = []

[dependency-groups]
dev = [
  "commitizen>=4.13.9",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.3",
  "pre-commit>=4.5.1",
  "pyrefly>=0.59.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-spec>=6.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.9",
  "toml>=0.10.2",
  "typer>=0.24.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.3.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "core/spakky/pyproject.toml:version",
  "core/spakky-domain/pyproject.toml:version",
  "core/spakky-data/pyproject.toml:version",
  "core/spakky-event/pyproject.toml:version",
  "core/spakky-task/pyproject.toml:version",
  "core/spakky-outbox/pyproject.toml:version",
  "plugins/spakky-logging/pyproject.toml:version",
  "plugins/spakky-fastapi/pyproject.toml:version",
  "plugins/spakky-rabbitmq/pyproject.toml:version",
  "plugins/spakky-security/pyproject.toml:version",
  "plugins/spakky-typer/pyproject.toml:version",
  "plugins/spakky-kafka/pyproject.toml:version",
  "plugins/spakky-sqlalchemy/pyproject.toml:version",
  "plugins/spakky-celery/pyproject.toml:version",
  "core/spakky-tracing/pyproject.toml:version",
  "plugins/spakky-opentelemetry/pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.uv.workspace]
members = [
  "core/spakky",
  "core/spakky-domain",
  "core/spakky-data",
  "core/spakky-event",
  "core/spakky-task",
  "core/spakky-outbox",
  "plugins/spakky-logging",
  "plugins/spakky-fastapi",
  "plugins/spakky-rabbitmq",
  "plugins/spakky-security",
  "plugins/spakky-typer",
  "plugins/spakky-kafka",
  "plugins/spakky-sqlalchemy",
  "plugins/spakky-celery",
  "core/spakky-tracing",
  "plugins/spakky-opentelemetry",
]


[tool.uv.sources]
spakky = { workspace = true }
spakky-domain = { workspace = true }
spakky-data = { workspace = true }
spakky-event = { workspace = true }
spakky-fastapi = { workspace = true }
spakky-rabbitmq = { workspace = true }
spakky-security = { workspace = true }
spakky-typer = { workspace = true }
spakky-kafka = { workspace = true }
spakky-sqlalchemy = { workspace = true }
spakky-outbox = { workspace = true }
spakky-task = { workspace = true }
spakky-celery = { workspace = true }
spakky-logging = { workspace = true }
spakky-tracing = { workspace = true }
spakky-opentelemetry = { workspace = true }

[tool.pyrefly]
python-version = "3.14"
search_path = ["scripts"]
project_excludes = ["**/__pycache__", "**/*.pyc"]
