[project]
name = "spakky-framework"
version = "6.7.0"
description = "Spakky framework monorepo"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = []

[dependency-groups]
dev = [
  "commitizen>=4.13.9",
  "freezegun>=1.5.1",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.3",
  "pre-commit>=4.5.1",
  "pyrefly>=0.59.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-spec>=6.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.9",
  "toml>=0.10.2",
  "typer>=0.24.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.7.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "core/spakky/pyproject.toml:version",
  "core/spakky-domain/pyproject.toml:version",
  "core/spakky-auth/pyproject.toml:version",
  "core/spakky-data/pyproject.toml:version",
  "core/spakky-event/pyproject.toml:version",
  "core/spakky-task/pyproject.toml:version",
  "core/spakky-agent/pyproject.toml:version",
  "core/spakky-actuator/pyproject.toml:version",
  "core/spakky-cache/pyproject.toml:version",
  "core/spakky-outbox/pyproject.toml:version",
  "core/spakky-tracing/pyproject.toml:version",
  "core/spakky-saga/pyproject.toml:version",
  "plugins/spakky-logging/pyproject.toml:version",
  "plugins/spakky-fastapi/pyproject.toml:version",
  "plugins/spakky-rabbitmq/pyproject.toml:version",
  "plugins/spakky-cryptography/pyproject.toml:version",
  "plugins/spakky-openfga/pyproject.toml:version",
  "plugins/spakky-typer/pyproject.toml:version",
  "plugins/spakky-kafka/pyproject.toml:version",
  "plugins/spakky-sqlalchemy/pyproject.toml:version",
  "plugins/spakky-celery/pyproject.toml:version",
  "plugins/spakky-opentelemetry/pyproject.toml:version",
  "plugins/spakky-grpc/pyproject.toml:version",
  "plugins/spakky-redis/pyproject.toml:version",
  "plugins/spakky-vllm/pyproject.toml:version",
  "plugins/spakky-oidc/pyproject.toml:version",
  "plugins/spakky-policy/pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.uv.workspace]
members = [
  "core/spakky",
  "core/spakky-domain",
  "core/spakky-auth",
  "core/spakky-data",
  "core/spakky-event",
  "core/spakky-task",
  "core/spakky-agent",
  "core/spakky-actuator",
  "core/spakky-cache",
  "core/spakky-outbox",
  "core/spakky-tracing",
  "core/spakky-saga",
  "plugins/spakky-logging",
  "plugins/spakky-fastapi",
  "plugins/spakky-rabbitmq",
  "plugins/spakky-cryptography",
  "plugins/spakky-openfga",
  "plugins/spakky-typer",
  "plugins/spakky-kafka",
  "plugins/spakky-sqlalchemy",
  "plugins/spakky-celery",
  "plugins/spakky-opentelemetry",
  "plugins/spakky-grpc",
  "plugins/spakky-redis",
  "plugins/spakky-vllm",
  "plugins/spakky-oidc",
  "plugins/spakky-policy",
]


[tool.uv.sources]
spakky = { workspace = true }
spakky-domain = { workspace = true }
spakky-auth = { workspace = true }
spakky-data = { workspace = true }
spakky-event = { workspace = true }
spakky-fastapi = { workspace = true }
spakky-rabbitmq = { workspace = true }
spakky-cryptography = { workspace = true }
spakky-openfga = { workspace = true }
spakky-typer = { workspace = true }
spakky-kafka = { workspace = true }
spakky-sqlalchemy = { workspace = true }
spakky-outbox = { workspace = true }
spakky-task = { workspace = true }
spakky-agent = { workspace = true }
spakky-actuator = { workspace = true }
spakky-cache = { workspace = true }
spakky-celery = { workspace = true }
spakky-logging = { workspace = true }
spakky-tracing = { workspace = true }
spakky-opentelemetry = { workspace = true }
spakky-grpc = { workspace = true }
spakky-saga = { workspace = true }
spakky-redis = { workspace = true }
spakky-vllm = { workspace = true }
spakky-oidc = { workspace = true }
spakky-policy = { workspace = true }

[tool.pyrefly]
python-version = "3.12"
search_path = ["scripts"]
project_excludes = ["**/__pycache__", "**/*.pyc"]
