[project]
name = "spakky-event"
version = "6.0.0"
description = "Event handling stereotype for Spakky Framework (@EventHandler, @on_event)"
readme = "README.md"
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
requires-python = ">=3.11"
dependencies = [
    "spakky-domain>=6.0.0",
    "spakky-data>=6.0.0",
    "pydantic>=2.12.5",
]

[project.entry-points."spakky.plugins"]
spakky-event = "spakky.event.main:initialize"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.event"

[tool.pyrefly]
python-version = "3.14"
search_path = ["src", "."]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "src/spakky/event"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=load
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/event/*"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.\\.",
    "pass",
]

[tool.uv.sources]
spakky-domain = { workspace = true }
spakky-data = { workspace = true }
