[project]
name = "spakky"
version = "6.5.0"
description = "Core module for Spakky framework to support DI/IoC, AOP, Plugin system, and more."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = [
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
minimal = []
domain = ["spakky-domain>=6.5.0"]
data = ["spakky-data>=6.5.0"]
event = ["spakky-event>=6.5.0"]
task = ["spakky-task>=6.5.0"]
agent-core = ["spakky-agent>=6.5.0"]
actuator = ["spakky-actuator>=6.5.0"]
cache-core = ["spakky-cache>=6.5.0"]
tracing = ["spakky-tracing>=6.5.0"]
outbox = ["spakky-outbox>=6.5.0"]
auth = ["spakky-auth>=6.5.0"]
logging = ["spakky-logging>=6.5.0"]
cryptography = ["spakky-cryptography>=6.5.0"]
oidc = ["spakky-oidc>=6.5.0"]
policy = ["spakky-policy>=6.5.0"]
openfga = ["spakky-openfga>=6.5.0"]
fastapi = ["spakky-fastapi>=6.5.0"]
typer = ["spakky-typer>=6.5.0"]
rabbitmq = ["spakky-rabbitmq>=6.5.0"]
kafka = ["spakky-kafka>=6.5.0"]
sqlalchemy = ["spakky-sqlalchemy>=6.5.0"]
celery = ["spakky-celery>=6.5.0"]
opentelemetry = ["spakky-opentelemetry>=6.5.0"]
grpc = ["spakky-grpc>=6.5.0"]
redis = ["spakky-redis>=6.5.0"]
vllm = ["spakky-vllm>=6.5.0"]
saga = ["spakky-saga>=6.5.0"]
web = [
    "spakky[fastapi]>=6.5.0",
    "spakky[logging]>=6.5.0",
]
cli = [
    "spakky[typer]>=6.5.0",
    "spakky[logging]>=6.5.0",
]
database = [
    "spakky-domain>=6.5.0",
    "spakky-data>=6.5.0",
    "spakky[sqlalchemy]>=6.5.0",
]
database-postgres = [
    "spakky[database]>=6.5.0",
    "psycopg[binary]>=3.3.3",
]
events-rabbitmq = [
    "spakky-event>=6.5.0",
    "spakky[rabbitmq]>=6.5.0",
]
events-kafka = [
    "spakky-event>=6.5.0",
    "spakky[kafka]>=6.5.0",
]
events-outbox-sqlalchemy = [
    "spakky-event>=6.5.0",
    "spakky-outbox>=6.5.0",
    "spakky[sqlalchemy]>=6.5.0",
]
event-driven = [
    "spakky[events-rabbitmq]>=6.5.0",
    "spakky[events-kafka]>=6.5.0",
    "spakky[events-outbox-sqlalchemy]>=6.5.0",
]
worker = [
    "spakky-task>=6.5.0",
    "spakky[celery]>=6.5.0",
]
security = [
    "spakky-auth>=6.5.0",
    "spakky[cryptography]>=6.5.0",
    "spakky[oidc]>=6.5.0",
    "spakky[policy]>=6.5.0",
    "spakky[openfga]>=6.5.0",
]
observability = [
    "spakky-actuator>=6.5.0",
    "spakky[logging]>=6.5.0",
    "spakky-tracing>=6.5.0",
    "spakky[opentelemetry]>=6.5.0",
]
cache-app = [
    "spakky-cache>=6.5.0",
    "spakky[redis]>=6.5.0",
]
agent = [
    "spakky-agent>=6.5.0",
    "spakky[vllm]>=6.5.0",
    "spakky[sqlalchemy]>=6.5.0",
]
recommended = [
    "spakky[web]>=6.5.0",
    "spakky[database]>=6.5.0",
    "spakky[observability]>=6.5.0",
]
full = [
    "spakky-actuator>=6.5.0",
    "spakky-agent>=6.5.0",
    "spakky-auth>=6.5.0",
    "spakky-cache>=6.5.0",
    "spakky-data>=6.5.0",
    "spakky-domain>=6.5.0",
    "spakky-event>=6.5.0",
    "spakky-outbox>=6.5.0",
    "spakky-saga>=6.5.0",
    "spakky-task>=6.5.0",
    "spakky-tracing>=6.5.0",
    "spakky[celery]>=6.5.0",
    "spakky[cryptography]>=6.5.0",
    "spakky[fastapi]>=6.5.0",
    "spakky[grpc]>=6.5.0",
    "spakky[kafka]>=6.5.0",
    "spakky[logging]>=6.5.0",
    "spakky[oidc]>=6.5.0",
    "spakky[openfga]>=6.5.0",
    "spakky[opentelemetry]>=6.5.0",
    "spakky[policy]>=6.5.0",
    "spakky[rabbitmq]>=6.5.0",
    "spakky[redis]>=6.5.0",
    "spakky[sqlalchemy]>=6.5.0",
    "spakky[typer]>=6.5.0",
    "spakky[vllm]>=6.5.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.core"

[tool.pyrefly]
python-version = "3.12"
search_path = ["src", "."]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "src/spakky"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=load
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/**/*.py"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
    "pass",
]
