[project]
name = "spakky"
version = "6.6.1"
description = "Core module for Spakky framework to support DI/IoC, AOP, Plugin system, and more."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = [
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
minimal = []
domain = ["spakky-domain>=6.6.1"]
data = ["spakky-data>=6.6.1"]
event = ["spakky-event>=6.6.1"]
task = ["spakky-task>=6.6.1"]
agent-core = ["spakky-agent>=6.6.1"]
actuator = ["spakky-actuator>=6.6.1"]
cache-core = ["spakky-cache>=6.6.1"]
tracing = ["spakky-tracing>=6.6.1"]
outbox = ["spakky-outbox>=6.6.1"]
auth = ["spakky-auth>=6.6.1"]
logging = ["spakky-logging>=6.6.1"]
cryptography = ["spakky-cryptography>=6.6.1"]
oidc = ["spakky-oidc>=6.6.1"]
policy = ["spakky-policy>=6.6.1"]
openfga = ["spakky-openfga>=6.6.1"]
fastapi = ["spakky-fastapi>=6.6.1"]
typer = ["spakky-typer>=6.6.1"]
rabbitmq = ["spakky-rabbitmq>=6.6.1"]
kafka = ["spakky-kafka>=6.6.1"]
sqlalchemy = ["spakky-sqlalchemy>=6.6.1"]
celery = ["spakky-celery>=6.6.1"]
opentelemetry = ["spakky-opentelemetry>=6.6.1"]
grpc = ["spakky-grpc>=6.6.1"]
redis = ["spakky-redis>=6.6.1"]
vllm = ["spakky-vllm>=6.6.1"]
saga = ["spakky-saga>=6.6.1"]
web = [
    "spakky[fastapi]>=6.5.0",
    "spakky[logging]>=6.5.0",
]
cli = [
    "spakky[typer]>=6.5.0",
    "spakky[logging]>=6.5.0",
]
database = [
    "spakky-domain>=6.6.1",
    "spakky-data>=6.6.1",
    "spakky[sqlalchemy]>=6.5.0",
]
database-postgres = [
    "spakky[database]>=6.5.0",
    "psycopg[binary]>=3.3.3",
]
events-rabbitmq = [
    "spakky-event>=6.6.1",
    "spakky[rabbitmq]>=6.5.0",
]
events-kafka = [
    "spakky-event>=6.6.1",
    "spakky[kafka]>=6.5.0",
]
events-outbox-sqlalchemy = [
    "spakky-event>=6.6.1",
    "spakky-outbox>=6.6.1",
    "spakky[sqlalchemy]>=6.5.0",
]
event-driven = [
    "spakky[events-rabbitmq]>=6.5.0",
    "spakky[events-kafka]>=6.5.0",
    "spakky[events-outbox-sqlalchemy]>=6.5.0",
]
worker = [
    "spakky-task>=6.6.1",
    "spakky[celery]>=6.5.0",
]
security = [
    "spakky-auth>=6.6.1",
    "spakky[cryptography]>=6.5.0",
    "spakky[oidc]>=6.5.0",
    "spakky[policy]>=6.5.0",
    "spakky[openfga]>=6.5.0",
]
observability = [
    "spakky-actuator>=6.6.1",
    "spakky[logging]>=6.5.0",
    "spakky-tracing>=6.6.1",
    "spakky[opentelemetry]>=6.5.0",
]
cache-app = [
    "spakky-cache>=6.6.1",
    "spakky[redis]>=6.5.0",
]
agent = [
    "spakky-agent>=6.6.1",
    "spakky[vllm]>=6.5.0",
    "spakky[sqlalchemy]>=6.5.0",
]
recommended = [
    "spakky[web]>=6.5.0",
    "spakky[database]>=6.5.0",
    "spakky[observability]>=6.5.0",
]
full = [
    "spakky-actuator>=6.6.1",
    "spakky-agent>=6.6.1",
    "spakky-auth>=6.6.1",
    "spakky-cache>=6.6.1",
    "spakky-data>=6.6.1",
    "spakky-domain>=6.6.1",
    "spakky-event>=6.6.1",
    "spakky-outbox>=6.6.1",
    "spakky-saga>=6.6.1",
    "spakky-task>=6.6.1",
    "spakky-tracing>=6.6.1",
    "spakky[celery]>=6.5.0",
    "spakky[cryptography]>=6.5.0",
    "spakky[fastapi]>=6.5.0",
    "spakky[grpc]>=6.5.0",
    "spakky[kafka]>=6.5.0",
    "spakky[logging]>=6.5.0",
    "spakky[oidc]>=6.5.0",
    "spakky[openfga]>=6.5.0",
    "spakky[opentelemetry]>=6.5.0",
    "spakky[policy]>=6.5.0",
    "spakky[rabbitmq]>=6.5.0",
    "spakky[redis]>=6.5.0",
    "spakky[sqlalchemy]>=6.5.0",
    "spakky[typer]>=6.5.0",
    "spakky[vllm]>=6.5.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.core"

[tool.pyrefly]
python-version = "3.12"
search_path = ["src", "."]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "src/spakky"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=load
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/**/*.py"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
    "pass",
]
